test/files/events-neg/abstract-event-concrete-class.scala
class C {
  evt e[Unit]
}

// vim: set ts=4 sw=4 et:
